--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio aliquam nobis suscipit corporis culpa necessitatibus velit natus incidunt sequi perspiciatis.</p><hr>
       </div>
       <div class="col-md-3 text-light">
-        <h4 class="">Importent Link</h4>
+        <h4 class="">Important Link</h4>
         <p>
           <a href="#" class=" text-light text-decoration-none">Home</a><br>
           <a href="#about" class=" text-light text-decoration-none">About</a><br>
